[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/InputDoor.gd" type="Script" id=1]
[ext_resource path="res://png/Objects/mashineDoor.png" type="Texture" id=2]
[ext_resource path="res://objects/ItemHolder.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.31864, 1 ),
"update": 0,
"values": [ -90.0, 0.0 ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.31864, 1 ),
"update": 0,
"values": [ 0.0, -90.0 ]
}

[node name="InputDoor" type="Position2D"]
rotation = -1.5708
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 1 )
anims/open = SubResource( 2 )

[node name="mashineDoor" type="Sprite" parent="."]
position = Vector2( -0.699646, -102.983 )
rotation = -1.5708
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )

[node name="ItemHolder" parent="." instance=ExtResource( 3 )]
position = Vector2( 10.0823, -102.82 )
rotation = 1.5708
scale = Vector2( 2, 2 )
[connection signal="attached" from="ItemHolder" to="." method="_on_ItemHolder_attached"]
[connection signal="detached" from="ItemHolder" to="." method="_on_ItemHolder_detached"]
